--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -8111,6 +8111,7 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingCrystalSeedE.7=false
     B:globbypotatorockhoundingabrasiveBlock=true
     B:globbypotatorockhoundingacaciaSlab=false
+    B:globbypotatorockhoundingacrylicBlock=false
     B:globbypotatorockhoundingalabasterBrick=true
     B:globbypotatorockhoundingalabasterBrick.1=true
     B:globbypotatorockhoundingalabasterBrick.10=true
@@ -9151,6 +9152,7 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingbogSculpt.2=false
     B:globbypotatorockhoundingbogSculpt.4=false
     B:globbypotatorockhoundingbogSculpt.6=false
+    B:globbypotatorockhoundingbogSculpt.8=false
     B:globbypotatorockhoundingbogSpruceSlabs=false
     B:globbypotatorockhoundingbogSpruceStairs=false
     B:globbypotatorockhoundingbrickCarver=false
@@ -17312,6 +17314,18 @@ magicalcrops {
 }
 
 
+magicbees {
+    B:effectJar=false
+    B:hive=true
+    B:hive.1=true
+    B:hive.2=true
+    B:magicApiary=false
+    B:magicbeesenchantedEarth=false
+    B:manaAuraProvider=false
+    B:visAuraProvider=false
+}
+
+
 malisisdoors {
     B:acaciaFenceGate=false
     B:birchFenceGate=false
@@ -19330,6 +19344,7 @@ opencomputers {
     B:adapter=false
     B:assembler=false
     B:cable=false
+    B:cable.11250603=false
     B:capacitor=false
     B:case1=false
     B:case2=false
@@ -20561,7 +20576,40 @@ reactorcraft {
 
 
 reccomplex {
+    B:genericsolid=true
+    B:genericsolid.1=true
+    B:genericsolid.10=true
+    B:genericsolid.11=true
+    B:genericsolid.12=true
+    B:genericsolid.13=true
+    B:genericsolid.14=true
+    B:genericsolid.15=true
+    B:genericsolid.2=true
+    B:genericsolid.3=true
+    B:genericsolid.4=true
+    B:genericsolid.5=true
+    B:genericsolid.6=true
+    B:genericsolid.7=true
+    B:genericsolid.8=true
+    B:genericsolid.9=true
+    B:genericspace=false
+    B:genericspace.1=false
+    B:genericspace.10=false
+    B:genericspace.11=false
+    B:genericspace.12=false
+    B:genericspace.13=false
+    B:genericspace.14=false
+    B:genericspace.15=false
+    B:genericspace.2=false
+    B:genericspace.3=false
+    B:genericspace.4=false
+    B:genericspace.5=false
+    B:genericspace.6=false
+    B:genericspace.7=false
+    B:genericspace.8=false
+    B:genericspace.9=false
     B:mazeGenerator=false
+    B:mazegenerator=false
     B:naturalFloor=true
     B:naturalFloor.1=true
     B:naturalFloor.10=true
@@ -20594,7 +20642,9 @@ reccomplex {
     B:negativeSpace.7=false
     B:negativeSpace.8=false
     B:negativeSpace.9=false
+    B:spawnscript=false
     B:structureGenerator=false
+    B:structuregenerator=false
     B:weightedcommandblock=false
 }
 
