--- a/config/RTG/biomes/icecreammod.cfg
+++ b/config/RTG/biomes/icecreammod.cfg
@@ -2,9 +2,9 @@
 
 biome {
 
-    vampirism {
+    icmod {
 
-        vampireforest {
+        "ice cream" {
             #  [default: true]
             B:"Allow Villages"=true
 
