--- a/config/globbypotato_rockhounding.cfg
+++ b/config/globbypotato_rockhounding.cfg
@@ -16,10 +16,10 @@ building {
     # Enable Modular glass panes
     B:EnableModularPanes=true
 
-    # Allow to craft fence with the new recipe rather than the old one
+    # Allow to craft fence with the 1.8 recipe rather than the old one
     B:EnableNewCraftingRecipes=true
 
-    # Allow to craft a set of clay, glass, wool and building parts with 16 new crafted dyes
+    # Allow to craft a set of clay, glass, wool and building parts with 16 new dye shades
     B:EnableNewDyes=true
 
     # Disable Plates where Forge Multipart may suffice. A lot of ID will be saved
@@ -47,8 +47,7 @@ building_settings {
 ##########################################################################################################
 
 chemistry {
-    # Fluids cleand by Mine Crawlers will drop as a placeable item
-    B:DropFluidAsItem=true
+    B:DropFluidAsItem=false
 
     # MAIN ENABLER. Enable Chemistry and its features
     B:EnableChemistry=true
@@ -57,7 +56,10 @@ chemistry {
     B:EnableGlowstone=true
 
     # Enable the Mine Crawlers machines
-    B:EnableMineCrawlers=true
+    B:EnableMineCrawlers=false
+
+    # Allow the Undefined Mineral to spawn rather than using the Hoe-pick
+    B:EnableMineralSpawn=true
 
     # Enable the OWC Energy system
     B:EnableOwc=true
@@ -88,6 +90,9 @@ chemistry {
 
     # Smallest mineral cloud size
     I:MineralMinVeinSize=10
+
+    # Chance to discover a mineral from stones using the Hoe-pick
+    I:MineralMiningRarity=30
 }
 
 
@@ -214,6 +219,9 @@ gemology {
     # MAIN ENABLER. Enable Gemology and its features
     B:EnableGemology=true
 
+    # Spawn Pyrite and Fluorite as separate ores than chemistry extraction.
+    B:EnableOres=false
+
     # Frequency of gem ore clouds
     I:GemOresFrequency=6
 
@@ -223,8 +231,14 @@ gemology {
     # Blocks above and under the effect of the grids
     I:GridLevelSpan=4
 
-    # Required gems to infuse their essense
+    # Required amount of gems to infuse for their essense
     I:InfusingGems=16
+
+    # How many ticks the jewel effect will last
+    I:JewelEffectTime=6000
+
+    # Success rate for the jewelry giving abilities
+    I:JewelSuccessRate=3
 
     # Max amount of prospectable shards from one ore
     I:MaxProspectedShards=5
@@ -244,7 +258,7 @@ gemology_settings {
     B:enableAlexandrite=true
     B:enableDiamondTiers=true
     B:enableDivination=true
-    B:enableGemology=false
+    B:enableGemology=true
     B:enableMoissanite=true
     B:enableRockVending=true
     B:enableTanksCrafting=false
@@ -281,13 +295,13 @@ machines_settings {
 ##########################################################################################################
 
 mining {
-    # Allow to the rocks of the mod to spawn. They can be otherwise purchased in the Rock Vendor
-    B:AllowRocksSpawning=true
+    # Allow the rocks of the mod to spawn. They can be otherwise purchased in the Rock Vendor
+    B:AllowRocksSpawning=false
 
     # Allow to spawn vanilla Andesite, Diorite and Granite
     B:AllowVanillaRocks=true
 
-    # Chance to collect Amber Shards while mining stones. The higher the rarer
+    # Chance to collect Copal Shards while mining stones. The higher the rarer
     I:AmberDropRarity=20
 
     # Base rarity of the extra drops occurrency
@@ -331,7 +345,7 @@ mobs {
     # Id for the Guru villager
     I:GuruVillagerID=200
 
-    # Id for theNovice villager
+    # Id for the Novice villager
     I:WildVillagerID=201
 }
 
@@ -357,6 +371,12 @@ mod_support {
 
     # Integration with Harvestcraft water blocks and items
     B:EnableHarvestcraftWater=true
+
+    # Integration with RE-Batteries as machines power supply
+    B:EnableIC2Classic=true
+
+    # Integration with Batteries as machines power supply
+    B:EnableMariculture=true
 
     # Integration with Pokeball coal in recipe
     B:EnablePokeball=true
@@ -400,7 +420,7 @@ ore_tiers {
     # Smallest coal cloud size
     I:IronOresMinVeinSize=4
 
-    # This must be the same as Tubes config
+    # This must be the same as in Tubes config
     I:TubesPlasticYeld=2
 }
 
@@ -553,8 +573,8 @@ sands {
 ##########################################################################################################
 
 structures {
-    # Rarity of the hut. The higher the rarer
-    I:GuruHutRarity=25
+    # Rarity of the hut. The higher the rarer, tweaked by biome type
+    I:GuruHutRarity=50
 
     # Allow the hut to spawn in superflat worlds at double rarity
     B:GuruHutSuperflatSpawn=true
@@ -654,6 +674,9 @@ tools {
     # Max uses for the Carving Burr
     I:UsesCarvingBurr=200
 
+    # Max uses for the Catalyzed Drills
+    I:UsesCatalyzedDrills=1000
+
     # Max uses for the Cutting Blade
     I:UsesCuttingBlade=300
 
@@ -686,6 +709,24 @@ truffles {
 
     # Chance for a pig to find a truffle. The higher the rarer
     I:TruffleRarity=16000
+}
+
+
+##########################################################################################################
+# water
+#--------------------------------------------------------------------------------------------------------#
+# These parameter are related to water making conditions
+##########################################################################################################
+
+water {
+    # Fluids cleaned by Mine Crawlers will drop as placeable items
+    B:DropMinedFluidAsItem=false
+
+    # Allow fountains to fill water buckets or beakers
+    B:EnableFountainWater=false
+
+    # Wheter the Evaporation Tank refills when raining
+    B:EvaporationTankRefill=true
 }
 
 
