--- a/config/reccomplex.cfg
+++ b/config/reccomplex.cfg
@@ -6,12 +6,27 @@ balancing {
 
     # The base weight of RC village generation types. Vanilla average is about 10 - if you want to fully replace vanilla structures in villages, crank this up to something big. [range: 0 ~ 100000, default: 10]
     I:baseVillageSpawnWeight=100
+
+    # Chance to use the customArtifactTag when an artifact generation tag fires. [range: 0.0 ~ 1.0, default: 0.0]
+    S:customArtifactChance=0.0
+
+    # Custom Inventory Generator to override when an artifact generation tag fires. [default: ]
+    S:customArtifactTag=
+
+    # Chance to use the customArtifactTag when a book generation tag fires. [range: 0.0 ~ 1.0, default: 0.0]
+    S:customBookChance=0.0
+
+    # Custom Inventory Generator to override when a book generation tag fires. [default: ]
+    S:customBookTag=
     S:disabledModGeneration <
      >
     S:disabledStructures <
      >
     S:forceEnabledStructures <
      >
+
+    # If disabled, Recurrent Complex will generate structures in worlds without the structure generation option. [default: true]
+    B:honorStructureGenerationOption=true
 
     # Resource Expression that will be applied to each loading inventory generator, determining if it should be set to 'active'. [default: ]
     S:inventoryGeneratorGenerationMatcher=
@@ -21,6 +36,9 @@ balancing {
 
     # Enabling this will make the mod register as little as possible, which enables it to be used server-side only. [default: false]
     B:lightweightMode=false
+
+    # Maximum number of reverses per room the maze generator can do. A higher number results in a better generation success rate, but may freeze the server temporarily. [range: -1.0 ~ 100.0, default: 10.0]
+    S:mazePlacementReversesPerRoom=10.0
 
     # Within this block radius, default structures won't spawn (in the main dimension). [range: 0.0 ~ 500.0, default: 30.0]
     S:minDistToSpawnForGeneration=30.0
