--- a/config/Reika/DragonAPI.cfg
+++ b/config/Reika/DragonAPI.cfg
@@ -10,7 +10,7 @@
     B:"Debug Mode"=false
     B:"Disable Hotbar Swapping"=false
     B:"Disable Renders For Debug"=false
-    B:"Disallow Null-Item ItemStacks to Prevent Crashes"=false
+    B:"Disallow Null-Item ItemStacks to Prevent Crashes"=true
     B:"Enable Vernal Behavior"=true
     B:"Force Gregtech Ore Compatibility"=true
     B:"Increase sound channel count"=true
