--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -5879,6 +5879,7 @@ forestry {
     B:fluidhoney=false
     B:fluidice=false
     B:fluidjuice=false
+    B:fluidmead=false
     B:fluidmilk=false
     B:fluidseedoil=false
     B:fluidshortmead=false
