--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -70,11 +70,17 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsFlourite=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsLead=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsNickel=0
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsOsmium=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsSilver=0
 
     #  [range: 0 ~ 2, default: 1]
