--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -107,8 +107,14 @@
 ##########################################################################################################
 
 "climate zone parameters" {
+    # True freezes oceans in snowy latitudes. Only used with latitudinal climates.
+    B:"Frozen Icecaps"=false
+
     # half the climate zone size from vanilla, unless quartering
     B:"Half Zone Size"=true
+
+    # Place mountains in chains
+    B:"Mountains in Mountain Chains"=false
 
     # quarter the climate zone size from vanilla
     B:"Quarter Zone Size"=false
@@ -116,8 +122,17 @@
     # ignore climate zones altogether
     B:"Random Biomes"=false
 
+    # Number of climate zones to shift the band from the default of the warm - to - cool transition at 0. Positive numbers shift the bands up.
+    I:bandedClimateOffset=0
+
     # Width of banded climates (climate depends on latitude). 0 or less for normal rules. Width is in terms of climate zones, whatever they are
     I:bandedClimateWidth=-1
+
+    # X offset for initial spawn search in blocks
+    I:xSpawnOffset=0
+
+    # Z offset for initial spawn search in blocks
+    I:zSpawnOffset=0
 }
 
 
