--- a/config/SpecialAI.cfg
+++ b/config/SpecialAI.cfg
@@ -79,7 +79,7 @@ passive_griefing {
     B:break_sound=false
 
     # (0.0-INFINITY) Mobs' reach (from eye height) when griefing blocks. Player reach is about 4.5. Default is 3.5.
-    D:grief_range=3.5
+    D:grief_range=2.5
 
     # (Integer >= 0) The range at which mobs will search for blocks to grief horizontally. Default is 12 blocks.
     I:grief_scan_range=12
@@ -94,7 +94,7 @@ passive_griefing {
     B:mad_creepers=false
 
     # (Entity list) List of mobs that gain passive griefing AI (note that the entity must have pathfinding AI enabled). Defaults to any kind of zombie or creeper.
-    S:mob_list=Zombie,Creeper
+    S:mob_list=Zombie
 
     # (Entity list) List of mobs that gain passive fiddling AI (note that the entity must have pathfinding AI enabled). Defaults to any kind of zombie or skeleton.
     S:mob_list_fiddling=Zombie,Skeleton
@@ -110,7 +110,7 @@ passive_griefing {
 
     # (Block list) Specific blocks that will NOT be griefed by mobs. Defaults to none.
     # Only really useful if "break_lights" is enabled or when you whitelist an entire namespace (*) to create safe light sources, prevent mobs from breaking normal world gen that produces light, or for removing a few blocks from a namespace that you don't want mobs to break.
-    S:target_blacklist=
+    S:target_blacklist=Ztones:lampb,Ztones:lampf,Ztones:lampt,Railcraft:lantern.stone:*
 
     # (Block list) Specific blocks that will be griefed by mobs. Defaults to farmland, beds, crafting tables, wooden doors, wooden trapdoors, fence gates, and ladders.
     # This is a comma-separated list. You may specify metadata (0-15) with a space after the id, followed by the metadata. For example, "cake" will cause mobs to target all cakes, while "cake 0" will cause mobs to only target cakes that have not been partially eaten.
