--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -20411,6 +20411,8 @@ railcraft {
     B:machineepsilon.5=false
     B:machinegamma=false
     B:machinegamma.1=false
+    B:machinegamma.10=false
+    B:machinegamma.11=false
     B:machinegamma.2=false
     B:machinegamma.3=false
     B:machinegamma.4=false
