--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -172,14 +172,14 @@ potions {
 
 shedding {
     # Configuration of Shedding for AgriCraft.villagerFarmer
-    S:AgriCraft.villagerFarmer.item=
+    S:AgriCraft.villagerFarmer.item=minecraft:emerald
     I:AgriCraft.villagerFarmer.lexiconDisplaySize=40
     I:AgriCraft.villagerFarmer.metadata=0
-    I:AgriCraft.villagerFarmer.rate=-1
-    S:AlienVillager.item=
+    I:AgriCraft.villagerFarmer.rate=226000
+    S:AlienVillager.item=minecraft:emerald
     I:AlienVillager.lexiconDisplaySize=40
     I:AlienVillager.metadata=0
-    I:AlienVillager.rate=-1
+    I:AlienVillager.rate=226000
     S:Angler.item=
     I:Angler.lexiconDisplaySize=40
     I:Angler.metadata=0
@@ -430,10 +430,10 @@ shedding {
     I:Forestry.butterflyGE.rate=-1
 
     # Configuration of Shedding for GalacticraftCore.AlienVillager
-    S:GalacticraftCore.AlienVillager.item=
+    S:GalacticraftCore.AlienVillager.item=minecraft:emerald
     I:GalacticraftCore.AlienVillager.lexiconDisplaySize=40
     I:GalacticraftCore.AlienVillager.metadata=0
-    I:GalacticraftCore.AlienVillager.rate=-1
+    I:GalacticraftCore.AlienVillager.rate=226000
 
     # Configuration of Shedding for GalacticraftCore.Crawler
     S:GalacticraftCore.Crawler.item=
@@ -910,10 +910,10 @@ shedding {
     I:MorePlanet.FronosBossTemp.lexiconDisplaySize=40
     I:MorePlanet.FronosBossTemp.metadata=0
     I:MorePlanet.FronosBossTemp.rate=-1
-    S:MorePlanet.FronosVillager.item=
+    S:MorePlanet.FronosVillager.item=minecraft:emerald
     I:MorePlanet.FronosVillager.lexiconDisplaySize=40
     I:MorePlanet.FronosVillager.metadata=0
-    I:MorePlanet.FronosVillager.rate=-1
+    I:MorePlanet.FronosVillager.rate=226000
     S:MorePlanet.FrozenSludgeling.item=
     I:MorePlanet.FrozenSludgeling.lexiconDisplaySize=40
     I:MorePlanet.FrozenSludgeling.metadata=0
@@ -946,10 +946,10 @@ shedding {
     I:MorePlanet.KoentusSludgeling.lexiconDisplaySize=40
     I:MorePlanet.KoentusSludgeling.metadata=0
     I:MorePlanet.KoentusSludgeling.rate=-1
-    S:MorePlanet.KoentusianVillager.item=
+    S:MorePlanet.KoentusianVillager.item=minecraft:emerald
     I:MorePlanet.KoentusianVillager.lexiconDisplaySize=40
     I:MorePlanet.KoentusianVillager.metadata=0
-    I:MorePlanet.KoentusianVillager.rate=-1
+    I:MorePlanet.KoentusianVillager.rate=226000
     S:MorePlanet.LemonDuck.item=
     I:MorePlanet.LemonDuck.lexiconDisplaySize=40
     I:MorePlanet.LemonDuck.metadata=0
@@ -1002,10 +1002,10 @@ shedding {
     I:MorePlanet.VenusianSlime.lexiconDisplaySize=40
     I:MorePlanet.VenusianSlime.metadata=0
     I:MorePlanet.VenusianSlime.rate=-1
-    S:MorePlanet.VenusianVillager.item=
+    S:MorePlanet.VenusianVillager.item=minecraft:emerald
     I:MorePlanet.VenusianVillager.lexiconDisplaySize=40
     I:MorePlanet.VenusianVillager.metadata=0
-    I:MorePlanet.VenusianVillager.rate=-1
+    I:MorePlanet.VenusianVillager.rate=226000
     S:Moth.item=
     I:Moth.lexiconDisplaySize=40
     I:Moth.metadata=0
