--- a/config/HarderWildlife.cfg
+++ b/config/HarderWildlife.cfg
@@ -58,6 +58,12 @@ animals {
     #  [range: 5000 ~ 2000000, default: 24000]
     I:animalMaxAge=24000
 
+    # How often cows (and mooshrooms) can be milked, in seconds.
+    # Note: Cows can 'store' up to 3 buckets of milk, will not refill after having offspring,
+    # and reabsorb the milk if they're starving.
+    #  [range: 600 ~ 3600, default: 60]
+    I:cowMilkFrequency=60
+
     # Raw leather (rawhide) requires curing on a tanning rack before it can be used.
     #  [default: true]
     B:doRawLeather=true
@@ -126,6 +132,9 @@ seasons {
 
     # Allows snow to pile up when it snows and melt away again. [default: true]
     B:EnableSnowAccumulation=true
+
+    # Enable to see baseline temp/rain modifiers in console. [default: false]
+    B:LogWeather=false
 
     # Toggle for whether or not seasonal variation in weather should occur. [default: true]
     B:doSeasons=true
