--- a/config/RTG/rtg.cfg
+++ b/config/RTG/rtg.cfg
@@ -184,6 +184,14 @@ ravines {
     #  [range: 0.0 ~ 2.0, default: 0.5]
     S:"Amplitude of Large-Scale River Cut Off"=0.5
 
+    # Biome ID for scenic lakes when frozen (default 11 = Frozen River)
+    #  [range: 0 ~ 254, default: 11]
+    I:"Biome for frozen scenic lakes"=11
+
+    # Biome ID for scenic lakes when not frozen (default 7 = River)
+    #  [range: 0 ~ 254, default: 7]
+    I:"Biome for scenic lakes"=7
+
     # Defaults to 1 (standard frequency)
     #  [range: 0.0 ~ 10.0, default: 1.0]
     S:"Lake Frequency Multipler"=1.0
