--- a/config/forestry/modules.cfg
+++ b/config/forestry/modules.cfg
@@ -39,7 +39,7 @@ modules {
     B:enderio=true
 
     # Adds several RF engines.
-    B:energy=false
+    B:energy=true
     B:equivelent.exchange=true
 
     # Compatibility plugin for Erebus
