--- a/config/railcraft/railcraft.cfg
+++ b/config/railcraft/railcraft.cfg
@@ -87,6 +87,7 @@ carts {
     B:cart.loco.electric=true
     B:cart.loco.steam.solid=true
     B:cart.pumpkin=true
+    B:cart.redstone.flux=true
     B:cart.tank=true
     B:cart.tnt=true
     B:cart.tnt.wood=true
