--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -192,6 +192,11 @@ appliedenergistics2 {
 }
 
 
+arcaneengineering {
+    B:destabilizer=false
+}
+
+
 architecturecraft {
     B:sawbench=false
     B:shape=false
@@ -4351,6 +4356,7 @@ chisel {
 
 
 chromaticraft {
+    B:chromaticraftblockadjacency=false
     B:chromaticraftblockchroma=false
     B:chromaticraftblockcoloraltar=false
     B:chromaticraftblockcolorlock=false
@@ -4393,6 +4399,7 @@ chromaticraft {
     B:chromaticraftblockhover.9=false
     B:chromaticraftblocklamp=false
     B:chromaticraftblocklampblock=false
+    B:chromaticraftblocklasereffect=false
     B:chromaticraftblocklight=false
     B:chromaticraftblocklockfence=false
     B:chromaticraftblocklockfreeze=false
@@ -4475,6 +4482,7 @@ cookingbook {
     B:cookingtable=false
     B:fridge=false
     B:sink=false
+    B:toaster=false
     B:toolrack=false
 }
 
@@ -4521,6 +4529,57 @@ customitems {
     B:smoothredsandstone=true
     B:sprucefence=false
     B:tower=false
+}
+
+
+customnpcs {
+    B:npcBanner=false
+    B:npcBarrel=false
+    B:npcBeam=false
+    B:npcBigSign=false
+    B:npcBloodBlock=false
+    B:npcBook=false
+    B:npcBorder=false
+    B:npcCampfire=false
+    B:npcCampfireUnlit=false
+    B:npcCandle=false
+    B:npcCandleUnlit=false
+    B:npcCarpentyBench=false
+    B:npcChair=false
+    B:npcCouchWood=false
+    B:npcCouchWool=false
+    B:npcCrate=false
+    B:npcCrystalBlock=false
+    B:npcCrystalBlock.1=false
+    B:npcCrystalBlock.10=false
+    B:npcCrystalBlock.11=false
+    B:npcCrystalBlock.12=false
+    B:npcCrystalBlock.13=false
+    B:npcCrystalBlock.14=false
+    B:npcCrystalBlock.15=false
+    B:npcCrystalBlock.2=false
+    B:npcCrystalBlock.3=false
+    B:npcCrystalBlock.4=false
+    B:npcCrystalBlock.5=false
+    B:npcCrystalBlock.6=false
+    B:npcCrystalBlock.7=false
+    B:npcCrystalBlock.8=false
+    B:npcCrystalBlock.9=false
+    B:npcLamp=false
+    B:npcLampUnlit=false
+    B:npcMailbox=false
+    B:npcPedestal=false
+    B:npcPlaceholder=true
+    B:npcRedstoneBlock=false
+    B:npcShelf=false
+    B:npcSign=false
+    B:npcStool=false
+    B:npcTable=false
+    B:npcTallLamp=false
+    B:npcTombstone=false
+    B:npcWallBanner=false
+    B:npcWaypoint=false
+    B:npcWeaponRack=false
 }
 
 
@@ -6236,6 +6295,24 @@ funkylocomotion {
 }
 
 
+gadomancy {
+    B:BlockAdditionalEldritchPortal=false
+    B:BlockArcaneDropper=false
+    B:BlockAuraPylon=false
+    B:BlockAuraPylon.1=false
+    B:BlockExtendedNodeJar=false
+    B:BlockInfusionClaw=false
+    B:BlockNodeManipulator.5=false
+    B:BlockRemoteJar=false
+    B:BlockStickyJar=false
+    B:BlockStoneMachine=false
+    B:BlockStoneMachine.1=false
+    B:BlockStoneMachine.2=false
+    B:BlockStoneMachine.3=false
+    B:BlockStoneMachine.4=false
+}
+
+
 galacticraftcore {
     B:slabGCDouble=true
     B:slabGCDouble.1=true
@@ -6746,6 +6823,10 @@ gardentrees {
     B:thinlog.13115=false
     B:thinlog.13116=false
     B:thinlog.13117=false
+    B:thinlog.13137=false
+    B:thinlog.13138=false
+    B:thinlog.13139=false
+    B:thinlog.13140=false
     B:thinlog.1315=false
     B:thinlog.13150=false
     B:thinlog.13151=false
@@ -6947,6 +7028,10 @@ gardentrees {
     B:thinlog.4941=false
     B:thinlog.4942=false
     B:thinlog.4943=false
+    B:thinlog.4945=false
+    B:thinlog.4946=false
+    B:thinlog.4947=false
+    B:thinlog.4948=false
     B:thinlog.4958=false
     B:thinlog.4959=false
     B:thinlog.4960=false
@@ -7114,6 +7199,10 @@ gardentrees {
     B:thinlog.845=false
     B:thinlog.846=false
     B:thinlog.847=false
+    B:thinlog.849=false
+    B:thinlog.850=false
+    B:thinlog.851=false
+    B:thinlog.852=false
     B:thinlog.8603=false
     B:thinlog.8605=false
     B:thinlog.8619=false
@@ -7171,6 +7260,10 @@ gardentrees {
     B:thinlog.9019=false
     B:thinlog.9020=false
     B:thinlog.9021=false
+    B:thinlog.9041=false
+    B:thinlog.9042=false
+    B:thinlog.9043=false
+    B:thinlog.9044=false
     B:thinlog.9054=false
     B:thinlog.9055=false
     B:thinlog.9056=false
@@ -7409,6 +7502,10 @@ gardentrees {
     B:thinlogfence.13115=false
     B:thinlogfence.13116=false
     B:thinlogfence.13117=false
+    B:thinlogfence.13137=false
+    B:thinlogfence.13138=false
+    B:thinlogfence.13139=false
+    B:thinlogfence.13140=false
     B:thinlogfence.1315=false
     B:thinlogfence.13150=false
     B:thinlogfence.13151=false
@@ -7610,6 +7707,10 @@ gardentrees {
     B:thinlogfence.4941=false
     B:thinlogfence.4942=false
     B:thinlogfence.4943=false
+    B:thinlogfence.4945=false
+    B:thinlogfence.4946=false
+    B:thinlogfence.4947=false
+    B:thinlogfence.4948=false
     B:thinlogfence.4958=false
     B:thinlogfence.4959=false
     B:thinlogfence.4960=false
@@ -7777,6 +7878,10 @@ gardentrees {
     B:thinlogfence.845=false
     B:thinlogfence.846=false
     B:thinlogfence.847=false
+    B:thinlogfence.849=false
+    B:thinlogfence.850=false
+    B:thinlogfence.851=false
+    B:thinlogfence.852=false
     B:thinlogfence.8603=false
     B:thinlogfence.8605=false
     B:thinlogfence.8619=false
@@ -7834,6 +7939,10 @@ gardentrees {
     B:thinlogfence.9019=false
     B:thinlogfence.9020=false
     B:thinlogfence.9021=false
+    B:thinlogfence.9041=false
+    B:thinlogfence.9042=false
+    B:thinlogfence.9043=false
+    B:thinlogfence.9044=false
     B:thinlogfence.9054=false
     B:thinlogfence.9055=false
     B:thinlogfence.9056=false
@@ -22715,6 +22824,11 @@ tis3d {
 }
 
 
+travellersgear {
+    B:armorstand=false
+}
+
+
 twilightforest {
     B:tileAuroraDoubleSlab=true
     B:tileAuroraPillar=true
@@ -22844,6 +22958,29 @@ twilightforest {
     B:tileUberousSoil=false
     B:tileUnripeTrollBer=false
     B:tileWispyCloud=false
+}
+
+
+witchinggadgets {
+    B:WGCustomAir=false
+    B:WGMetalDevice=false
+    B:WGMetalDevice.1=false
+    B:WGMetalDevice.2=false
+    B:WGMetalDevice.3=false
+    B:WGMetalDevice.4=false
+    B:WGMetalDevice.5=false
+    B:WGMetalDevice.6=false
+    B:WGMetalDevice.7=false
+    B:WGMetalDevice.8=false
+    B:WGMetalDevice.9=false
+    B:WGRoseVine=false
+    B:WGStoneDevice=false
+    B:WGVoidWalkway=false
+    B:WGWoodenDevice=false
+    B:WGWoodenDevice.2=false
+    B:WGWoodenDevice.3=false
+    B:WGWoodenDevice.4=false
+    B:WGWoodenDevice.5=false
 }
 
 
