--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -2,43 +2,46 @@
 
 "biome ids" {
     I:"Ender Forest Biome ID"=47
-    I:"Island Biome ID"=101
-    I:"Plains Biome ID"=122
     I:"Rainbow Forest Biome ID"=48
-    I:"Skyland Biome ID"=100
+}
+
+
+"client specific" {
+    B:"[B72018891] Biome FX"=true
+    B:"[CD9801A43] Connected Crystalline Stone Textures"=false
+    B:"[D77120039] Dye Block Particles"=true
+    B:"[DE2E76572] Disable Pendant Particles"=true
+    B:"[E05CB0039] Ender Forest Coloring"=false
+    I:"[E596774F6] Energy Buffer Overlay Location"=0
+    B:"[L3086DD22] Lamp Noises"=true
+    B:"[R3B2C274D] Reload Handbook Data on Open"=false
+    B:"[U08787298] Use vanilla keybind system for ability selection GUI"=false
 }
 
 
 "control setup" {
+    B:"Adjacency Upgrades Require Energy"=false
     B:"Allow Danger in Rainbow Forests"=true
     B:"Allow duplication wand to copy TileEntities"=false
     B:"Always Respawn EnderDragon"=true
     B:"Auxiliary Fragment Acquisition"=false
-    B:"Biome FX"=true
     I:"Cave Lighter Range"=128
     I:"Cave Lighter Zone Size"=8
     I:"Chest Generation Tier"=4
-    B:"Connected Crystalline Stone Textures"=false
     B:"Crystal Plants May Drop Shards"=true
     B:"Delete End on Unload"=false
     I:"Dimension Structure Difficulty"=3
-    B:"Disable Pendant Particles"=true
     I:"Duplication Wand Max Volume"=1000
-    B:"Dye Block Particles"=true
     B:"Enable Ball Lightning"=true
     B:"Enable Biome Painter"=true
     B:"Enable Ender TNT"=true
     I:"Ender Forest Biome Weight"=5
-    B:"Ender Forest Coloring"=false
     I:"Ender Pool Density from 1 to 3"=2
-    I:"Energy Buffer Overlay Location"=0
-    B:"Force Java 8 to use G1GC To Prevent Crashes - Disabling this disables some content"=false
     B:"Generate Anti-Taint plants in Rainbow Forest"=true
     B:"Generate Pylons in Non-Overworld"=false
     B:"Generate Some Pylons as Broken"=false
     I:"Guardian Stone Range"=16
     B:"Guardian Stone is Full Chunk Height"=false
-    B:"Lamp Noises"=true
     B:"Liquid Ender Effect"=true
     I:"Lumen Relay Range"=16
     B:"Make Pylon pathfinding attempt shortest path - can be intensive"=false
@@ -46,18 +49,31 @@
     I:"Max Accelerator Lag in NanoSeconds"=1000000
     B:"Nether Crystals"=true
     B:"Notify players of progress gains"=true
-    B:"Pylons Chunkload Selves Once Used"=false
+    B:"Notify players via chat of their own progress gains"=true
+    B:"Pylons Chunkload Selves Once Used"=true
     I:"Rainbow Forest Animal Density"=6
     I:"Rainbow Forest Biome Weight"=5
     D:"Rainbow Leaf Gold Apple Drop Percentage"=0.25
     B:"Rainbow Trees Spread Rainbow Forests"=false
-    B:"Reload Handbook Data on Open"=false
     B:Retrogeneration=false
     B:"Run Worldgen in Superflat Worlds"=false
     B:"Spawn with CC Lexicon"=true
-    B:"Use vanilla keybind system for ability selection GUI"=false
     I:"Vanilla Dye Drop Percentage"=100
     B:"World Rifts Chunkload"=false
+}
+
+
+"dimension biome ids" {
+    I:"Aura Ocean Biome ID"=206
+    I:"Central Biome ID"=209
+    I:"Crystal Forest Biome ID"=204
+    I:"Crystal Mountains Biome ID"=205
+    I:"Crystal Plains Biome ID"=122
+    I:"Glowing Forest Biome ID"=203
+    I:"Island Biome ID"=101
+    I:"Skyland Biome ID"=100
+    I:"Structure Biome ID"=207
+    I:"Voidland Biome ID"=208
 }
 
 
@@ -71,7 +87,7 @@
 
 "generate mod logs" {
     B:Alder=true
-    B:Amaranth=true
+    B:Amaranth=false
     B:Ash=true
     B:Bamboo=true
     B:"Biomes O Plenty Mangrove"=true
