--- a/config/Reika/DragonAPI.cfg
+++ b/config/Reika/DragonAPI.cfg
@@ -1,29 +1,36 @@
 # Configuration file
 
+"client specific" {
+    B:"[C32C35B68] Console Loading Info"=true
+    B:"[C3E6D162B] Custom/Donator Renders"=true
+    B:"[D087D1CA5] Disable Alpha Clipping in WorldRenderer"=true
+    B:"[DAA7CE173] Debug Mode"=false
+    B:"[DAB614342] Disable Renders For Debug"=false
+    B:"[DCBEB5A9C] Disable Hotbar Swapping"=false
+    I:"[DE537279B] Debug Overlay Key (LWJGL ID)"=15
+    B:"[EA0CEDE7D] Enable Vernal Amusement Behavior"=true
+    B:"[I2ED0CD60] Increase sound channel count"=true
+    B:"[LCBB2F45D] Log Loading Info To Separate File"=false
+    B:"[LF79D165F] Log errors to chat"=true
+    I:"[PEEE9A4C7] Particle Limit (Vanilla = 4000)"=4000
+    B:"[SB57CAB47] Show TileEntity NBT when using Debug Key"=false
+    B:"[SE8D7CB8B] Sort Creative Tabs Alphabetically"=true
+}
+
+
 "control setup" {
     B:"Admins Bypass Permissions"=true
     B:"Attempt to Repair Environment Sanity"=false
     B:"Check Environment Sanity"=false
     B:"Compare mod file hashes between client and server"=true
-    B:"Console Loading Info"=true
-    B:"Custom/Donator Renders"=true
-    B:"Debug Mode"=false
-    B:"Disable Hotbar Swapping"=false
-    B:"Disable Renders For Debug"=false
     B:"Disallow Null-Item ItemStacks to Prevent Crashes"=true
-    B:"Enable Vernal Behavior"=true
     B:"Force Gregtech Ore Compatibility"=true
-    B:"Increase sound channel count"=true
-    B:"Log Loading Info To Separate File"=false
     B:"Log Sync Packet CME Avoidance"=true
-    B:"Log errors to chat"=false
     I:"Minimum Delay (ms) for 'Can't Keep Up!' Log Warning"=0
     B:"Only show update notice to Ops or SSP"=true
     B:"Only show update notice to pack creator"=true
     B:"Restore Obsidian Blast Resistance"=true
-    B:"Show TileEntity NBT when using TAB"=false
     B:"Slow Sync Packets - Only use this as a last resort"=false
-    B:"Sort Creative Tabs Alphabetically"=true
     I:"Sync Packet ID"=182
     B:"Use HashMap for Sound Categories - Only use if necessary"=false
 }
