--- a/config/Reika/ExpandedRedstone.cfg
+++ b/config/Reika/ExpandedRedstone.cfg
@@ -1,7 +1,7 @@
 # Configuration file
 
-"control setup" {
-    B:"Ticking Noises"=false
+"client specific" {
+    B:"[TAEF90CCF] Ticking Noises"=false
 }
 
 
