--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -1,47 +1,62 @@
 # Configuration file
 
 "achievement ids" {
-    I:BEDROCKBREAKER=24012
-    I:BEDROCKSHAFT=24016
-    I:BEDROCKTOOLS=24017
-    I:BORER=24006
-    I:CUTKNOT=24034
-    I:CVT=24015
-    I:DAMAGEGEARS=24023
-    I:DIAMONDGEARS=24024
-    I:DOUBLEKILL=24038
-    I:EXTRACTOR=24002
-    I:FLOODLIGHT=24022
-    I:GIGAWATT=24026
-    I:GPR=24005
-    I:GPRENDPORTAL=24033
-    I:GPRSPAWNER=24032
-    I:GRAVELGUN=24029
-    I:INSANITY=24039
-    I:JETCHICKEN=24018
-    I:JETENGINE=24009
-    I:JETFAIL=24019
-    I:JETFUEL=24007
-    I:LANDMINE=24030
-    I:LIGHTFALL=24020
-    I:MAKERAILGUN=24010
-    I:MAKESTEEL=24000
-    I:MAKEYEAST=24001
-    I:MASSIVEHIT=24036
-    I:MRADS32=24025
-    I:NETHERHEATRAY=24031
-    I:OVERPRESSURE=24037
-    I:PCB=24003
-    I:PUMP=24004
-    I:RAILDRAGON=24027
-    I:RAILKILLED=24028
-    I:RAREEXTRACT=24035
+    I:BEDROCKBREAKER=24013
+    I:BEDROCKSHAFT=24017
+    I:BEDROCKTOOLS=24018
+    I:BORER=24007
+    I:CUTKNOT=24035
+    I:CVT=24016
+    I:DAMAGEGEARS=24024
+    I:DIAMONDGEARS=24025
+    I:DOUBLEKILL=24039
+    I:EXTRACTOR=24003
+    I:FLOODLIGHT=24023
+    I:GIGAWATT=24027
+    I:GPR=24006
+    I:GPRENDPORTAL=24034
+    I:GPRSPAWNER=24033
+    I:GRAVELGUN=24030
+    I:INSANITY=24040
+    I:INSTANTBED=24041
+    I:JETCHICKEN=24019
+    I:JETENGINE=24010
+    I:JETFAIL=24020
+    I:JETFUEL=24008
+    I:LANDMINE=24031
+    I:LIGHTFALL=24021
+    I:MAKERAILGUN=24011
+    I:MAKESTEEL=24001
+    I:MAKEYEAST=24002
+    I:MASSIVEHIT=24037
+    I:MRADS32=24026
+    I:NETHERHEATRAY=24032
+    I:OVERPRESSURE=24038
+    I:PCB=24004
+    I:PUMP=24005
+    I:RAILDRAGON=24028
+    I:RAILKILLED=24029
+    I:RAREEXTRACT=24036
     I:RCUSEBOOK=24000
-    I:RECYCLE=24008
-    I:SPRINKLER=24021
-    I:STEAMENGINE=24013
-    I:STEELSHAFT=24014
-    I:SUCKEDINTOJET=24011
+    I:RECYCLE=24009
+    I:SPRINKLER=24022
+    I:STEAMENGINE=24014
+    I:STEELSHAFT=24015
+    I:SUCKEDINTOJET=24012
+}
+
+
+"client specific" {
+    B:"[C680FA838] Color Blind Mode"=false
+    D:"[E1736FE4B] Engine Volume"=1.0
+    B:"[EF993F080] Engine Running Sounds"=true
+    D:"[MB0CC4635] Machine Volume Multiplier"=1.0
+    B:"[R3B2C274D] Reload Handbook Data on Open"=false
+    B:"[R5CB4A6D2] Render projector lines"=true
+    B:"[R875BC285] Run power transfer code on client"=false
+    B:"[S42337B12] Show Force Fields"=true
+    I:"[SD64ECCDD] Sprinkler Particle Density"=4
+    B:"[TCEAB0FF3] Tools Clear Chat"=true
 }
 
 
@@ -70,7 +85,6 @@
     I:"Cave Scanner FOV"=16
     I:"Chest Generation Tier"=4
     I:"Chunk Loader Max Radius in Chunks"=8
-    B:"Color Blind Mode"=false
     B:"Conservative Jetpack Firing"=true
     B:"Crafting Table can Make Machines"=true
     I:"Difficulty Control"=2
@@ -82,15 +96,13 @@
     B:"Enable Chunk Loader"=true
     B:"Enable Item Cannon"=true
     B:"Enable Light Bridge"=true
-    B:"Engine Running Sounds"=true
-    D:"Engine Volume"=1.0
     B:"Extractor Drill Wears Down"=false
     I:"Fluid Flow Speed"=5
     B:"Force Inter-Mod Ore Compatibility"=true
     B:"GPR Renders Ores"=true
     B:"Hard Mode EU Compatibility"=false
     B:"Harder Converter Unit Recipes"=false
-    B:"Hardmode Gravel Gun"=true
+    B:"Hardmode Gravel Gun"=false
     B:"Increased Harvest Level for HSLA"=false
     B:"Instant Woodcutter"=true
     D:"Iron Ore Density"=1.0
@@ -100,7 +112,6 @@
     I:"Liquid Spiller Range, Use Zero to Disable"=16
     B:"Lock enchants on bedrock tools"=true
     B:"Log Block Placement and Removal"=false
-    D:"Machine Volume Multiplier"=1.0
     B:"Machine Warning Alarms"=false
     I:"Max Aerosolizer Range"=128
     I:"Max Bait Box Mob Count"=256
@@ -116,23 +127,17 @@
     I:"Player Detector Range"=128
     I:"Power Converter Loss Percent"=0
     B:"Railgun Block Damage"=true
-    B:"Reload Handbook Data on Open"=false
-    B:"Render projector lines"=true
     B:"Rotate Hose/Pipe/Fuel Line Recipes"=false
     I:"Rotational Dynamo Recipe Difficulty"=0
-    B:"Run power transfer code on client"=true
-    B:"Show Force Fields"=true
     I:"Sonic Borer Range"=512
     B:"Spawn Mobs When Harvesting Spawners By Hand"=true
     B:"Spawn XP from Friction Heater"=true
     B:"Spawn with RC Handbook"=true
     I:"Spawner Mob Limit"=128
-    I:"Sprinkler Particle Density"=4
     B:"Terraformer Block Editing"=true
-    B:"Tools Clear Chat"=false
     B:"Turrets can target players"=false
     B:"Tutorial Mode"=false
-    B:"Use Forestry Bees To Produce Yeast"=0
+    I:"Use Forestry Bees To Produce Yeast"=0
 }
 
 
