--- a/config/cookingbook.cfg
+++ b/config/cookingbook.cfg
@@ -12,6 +12,9 @@ blocks {
 
     #  [default: true]
     B:Sink=true
+
+    #  [default: true]
+    B:Toaster=true
 }
 
 
@@ -61,11 +64,17 @@ items {
 ##########################################################################################################
 
 modules {
+    # Dynamic Food Values [default: true]
+    B:AppleCore=true
+
     # Multiblock Kitchen Support (Freezer) [default: true]
     B:EnviroMine=true
 
     # Multiblock Kitchen Support, Tool Support, Oven Recipes, Oven Fuel, Ingredient Recipes [default: true]
     B:"Pam's HarvestCraft"=true
+
+    # Should bread be toasted into Pam's toast (if available) instead of the Cooking for Blockheads one? [default: true]
+    B:"Use Pam's Toast"=true
 
     # Sink Support, Ingredient Recipes [default: true]
     B:"Vanilla Minecraft"=true
