--- a/config/railcraft/railcraft.cfg
+++ b/config/railcraft/railcraft.cfg
@@ -84,6 +84,7 @@ carts {
     B:cart.energy.mfe=true
     B:cart.energy.mfsu=true
     B:cart.gift=true
+    B:cart.loco.creative=true
     B:cart.loco.electric=true
     B:cart.loco.steam.solid=true
     B:cart.pumpkin=true
