--- a/config/Reika/ReactorCraft.cfg
+++ b/config/Reika/ReactorCraft.cfg
@@ -1,33 +1,39 @@
 # Configuration file
 
 "achievement ids" {
-    I:AMMONIA=72010
-    I:CANDU=72017
-    I:DECAY=72008
-    I:DEPLETED=72003
-    I:ESCAPE=72019
-    I:FIFTYGW=72022
-    I:FISSION=72004
-    I:FUSION=72021
-    I:GIGATURBINE=72012
-    I:HEAVYWATER=72016
-    I:HOLDWASTE=72007
-    I:HOTCORE=72013
-    I:MELTDOWN=72015
-    I:MELTPIPE=72020
+    I:AMMONIA=72012
+    I:CANDU=72019
+    I:DECAY=72010
+    I:DEPLETED=72005
+    I:ESCAPE=72021
+    I:FIFTYGW=72024
+    I:FISSION=72006
+    I:FUSION=72023
+    I:GIGATURBINE=72014
+    I:HEAVYWATER=72018
+    I:HOLDWASTE=72009
+    I:HOTCORE=72015
+    I:MELTDOWN=72017
+    I:MELTPIPE=72022
     I:MINECADMIUM=72002
-    I:MINEURANIUM=72000
-    I:NH3EXPLODE=72011
-    I:PEBBLE=72001
-    I:PEBBLEFAIL=72023
-    I:PLASMA=72018
-    I:PLUTONIUM=72005
-    I:PUPOISON=72006
+    I:MINEURANIUM=72001
+    I:NH3EXPLODE=72013
+    I:PEBBLE=72003
+    I:PEBBLEFAIL=72025
+    I:PLASMA=72020
+    I:PLASMADIE=72027
+    I:PLUTONIUM=72007
+    I:PUPOISON=72008
     I:RECUSEBOOK=72000
-    I:SCRAM=72014
+    I:SCRAM=72016
     I:THORIUMDUMP=72026
-    I:UF6=72002
-    I:WASTELEAK=72009
+    I:UF6=72004
+    I:WASTELEAK=72011
+}
+
+
+"client specific" {
+    B:"[VC402F87D] Visible Neutrons"=true
 }
 
 
@@ -44,7 +50,6 @@
     B:"Rainbow Fluorite"=false
     B:"Retrogen Ores"=false
     I:"Toroid Spark Delay"=4
-    B:"Visible Neutrons"=true
 }
 
 
