--- a/config/Reika/ReactorCraft.cfg
+++ b/config/Reika/ReactorCraft.cfg
@@ -40,12 +40,12 @@
 "control setup" {
     B:"Allow Fluorite Recoloring"=false
     B:"Fission Cores Chunkload When Active"=true
-    B:"Generate Cadmium Ore Even If Other Mods Do"=false
-    B:"Generate Calcite Ore Even If Other Mods Do"=false
-    B:"Generate Indium Ore Even If Other Mods Do"=false
-    B:"Generate Magnetite Ore Even If Other Mods Do"=false
-    B:"Generate Silver Ore Even If Other Mods Do"=false
-    I:"Ore Density Percentage"=0
+    B:"Generate Cadmium Ore Even If Other Mods Do"=true
+    B:"Generate Calcite Ore Even If Other Mods Do"=true
+    B:"Generate Indium Ore Even If Other Mods Do"=true
+    B:"Generate Magnetite Ore Even If Other Mods Do"=true
+    B:"Generate Silver Ore Even If Other Mods Do"=true
+    I:"Ore Density Percentage"=100
     I:"Ore Discretization"=1
     B:"Rainbow Fluorite"=false
     B:"Retrogen Ores"=false
