--- a/config/ExtraUtilities.cfg
+++ b/config/ExtraUtilities.cfg
@@ -28,7 +28,7 @@ blocks {
     B:MagnumTorchEnabled=false
     B:MiniChestEnabled=true
     B:PeacefultableEnabled=false
-    B:PortalEnabled=true
+    B:PortalEnabled=false
     B:PureLoveBlockEnabled=true
     B:QEDEnabled=true
     B:SlightlyLargerChestEnabled=true
