--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -64,15 +64,23 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsCadmium=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsCopper=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsFlourite=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsLead=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsNickel=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsOsmium=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsSilver=2
 
     #  [range: 0 ~ 2, default: 1]
