--- a/config/RTG/biomes/atg.cfg
+++ b/config/RTG/biomes/atg.cfg
@@ -8,6 +8,9 @@ biome {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -43,12 +46,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         rockysteppe {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -84,12 +96,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         shrubland {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -125,12 +146,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         snowygravelbeach {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -166,12 +196,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         tropicalshrubland {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -207,12 +246,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         tundra {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -248,12 +296,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         volcano {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: true]
+            B:"Allow Volcanoes"=true
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -289,12 +346,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         woodland {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -330,6 +396,12 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
     }
