--- a/config/RTG/biomes/buildcraft.cfg
+++ b/config/RTG/biomes/buildcraft.cfg
@@ -8,6 +8,9 @@ biome {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -43,12 +46,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         oceanoilfield {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -84,6 +96,12 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
     }
