--- a/config/RTG/biomes/ridiculousworld.cfg
+++ b/config/RTG/biomes/ridiculousworld.cfg
@@ -8,6 +8,9 @@ biome {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -52,12 +55,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         murica {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -93,12 +105,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         mountainofmadness {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -134,12 +155,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         ossuary {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -175,12 +205,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         rockcandymountain {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -216,12 +255,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         shadowfen {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -257,12 +305,21 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
         spookyforest {
             #  [default: true]
             B:"Allow Villages"=true
 
+            #  [default: false]
+            B:"Allow Volcanoes"=false
+
             # This setting controls the size of caves.
             # HIGHER values = BIGGER caves & MORE lag. (14 = vanilla cave density)
             # Set to -1 to use global setting. Set to 0 to disable caves for this biome.
@@ -298,6 +355,12 @@ biome {
 
             #  [default: true]
             B:"Use RTG Surfaces"=true
+
+            # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
+            #  [range: -1 ~ 2147483647, default: -1]
+            I:"Volcano Chance"=-1
         }
 
     }
