--- a/config/RTG/rtg.cfg
+++ b/config/RTG/rtg.cfg
@@ -163,6 +163,30 @@ mineshafts {
 }
 
 
+plateaus {
+    # Comma-separated list of meta values for the clay blocks used in the Mesa Bryce biome.
+    # -1 = Hardened Clay; 0-15 = Stained Clay
+    # 0 = White; 1 = Orange; 2 = Magenta; 3 = Light Blue; 4 = Yellow; 5 = Lime; 6 = Pink; 7 = Gray
+    # 8 = Light Gray; 9 = Cyan; 10 = Purple; 11 = Blue; 12 = Brown; 13 = Green; 14 = Red; 15 = Black
+    #  [default: -1,-1,0,1,0,0,0,14,0,8,0,1,8,0,-1,0,14,0,0,14,0,0,8]
+    S:"Mesa Bryce Clay Colours"=-1,-1,0,1,0,0,0,14,0,8,0,1,8,0,-1,0,14,0,0,14,0,0,8
+
+    # Comma-separated list of meta values for the clay blocks used in the Mesa biome variants (doesn't include Mesa Bryce).
+    # -1 = Hardened Clay; 0-15 = Stained Clay
+    # 0 = White; 1 = Orange; 2 = Magenta; 3 = Light Blue; 4 = Yellow; 5 = Lime; 6 = Pink; 7 = Gray
+    # 8 = Light Gray; 9 = Cyan; 10 = Purple; 11 = Blue; 12 = Brown; 13 = Green; 14 = Red; 15 = Black
+    #  [default: -1,-1,-1,1,1,1,0,-1,-1,6,1,1,8,0,-1,-1,14,-1,-1,6,1,1,4]
+    S:"Mesa Clay Colours"=-1,-1,-1,1,1,1,0,-1,-1,6,1,1,8,0,-1,-1,14,-1,-1,6,1,1,4
+
+    # Comma-separated list of meta values for the clay blocks used in the Savanna biome variants.
+    # -1 = Hardened Clay; 0-15 = Stained Clay
+    # 0 = White; 1 = Orange; 2 = Magenta; 3 = Light Blue; 4 = Yellow; 5 = Lime; 6 = Pink; 7 = Gray
+    # 8 = Light Gray; 9 = Cyan; 10 = Purple; 11 = Blue; 12 = Brown; 13 = Green; 14 = Red; 15 = Black
+    #  [default: 0,0,0,0,8,8,12,12,8,0,8,12,12,8,12,8,0,0,8,12,12]
+    S:"Savanna Clay Colours"=0,0,0,0,8,8,12,12,8,0,8,12,12,8,12,8,0,0,8,12,12
+}
+
+
 ravines {
     # Must be set to TRUE for the other ravine settings to have any effect.
     # If FALSE, RTG won't interfere with ravine generation at all.
@@ -256,7 +280,7 @@ strongholds {
 
     # The meta value of the shadow block for desert cliffs. Defaults to 0 (white).
     #  [range: 0 ~ 15, default: 0]
-    I:"Desert shadow block meta value"=8
+    I:"Desert shadow block meta value"=0
 
     # The block to use for stone terrain shadowing, typically seen on the cliffs of stone mountains. Defaults to stained hardened clay.
     #  [default: minecraft:stained_hardened_clay]
@@ -323,6 +347,15 @@ volcanoes {
     # Set this to FALSE to prevent lava from flowing down the sides of volcanoes.
     #  [default: true]
     B:"Enable volcano eruptions"=true
+
+    # Set this to FALSE to prevent volcanoes from generating.
+    #  [default: true]
+    B:"Enable volcanoes"=true
+
+    # 1/x chance that a volcano will generate in a biome that has volcanoes enabled.
+    # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+    #  [range: 1 ~ 2147483647, default: 32]
+    I:"Volcano Chance"=32
 
     # The block to use for the top of the volcano. Defaults to Obsidian.
     #  [default: minecraft:obsidian]
